--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -61,9 +61,9 @@ foreach(test_src ${rocRAND_TEST_SRCS})
     )
     add_relative_test(${test_name} ${test_name})
     rocm_install(TARGETS ${test_name} COMPONENT tests)
-    if (WIN32 AND NOT DEFINED DLLS_COPIED)
-      set(DLLS_COPIED "YES")
-      set(DLLS_COPIED ${DLLS_COPIED} PARENT_SCOPE)
+    if (WIN32 AND NOT DEFINED DLLS_COPIED_TESTS)
+      set(DLLS_COPIED_TESTS "YES")
+      set(DLLS_COPIED_TESTS ${DLLS_COPIED_TESTS} PARENT_SCOPE)
       # for now adding in all .dll as dependency chain is not cmake based on win32
       file( GLOB third_party_dlls
       LIST_DIRECTORIES ON
