--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,4 +1,9 @@
 add_executable(xorwow_precomputed_generator xorwow_precomputed_generator.cpp)
 add_executable(sobol32_direction_vector_generator sobol32_direction_vector_generator.cpp)
+add_executable(scrambled_sobol32_direction_vector_generator scrambled_sobol32_direction_vector_generator.cpp)
+add_executable(scrambled_sobol32_constants_generator scrambled_sobol32_constants_generator.cpp)
 add_executable(sobol64_direction_vector_generator sobol64_direction_vector_generator.cpp)
+add_executable(scrambled_sobol64_direction_vector_generator scrambled_sobol64_direction_vector_generator.cpp)
+add_executable(scrambled_sobol64_constants_generator scrambled_sobol64_constants_generator.cpp)
+add_executable(mrg31k3p_precomputed_generator mrg31k3p_precomputed_generator.cpp)
 add_executable(mrg32k3a_precomputed_generator mrg32k3a_precomputed_generator.cpp)
