--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -44,12 +44,14 @@ function(add_rocrand_benchmark benchmark_src legacy)
 endfunction()
 
 add_rocrand_benchmark("benchmark_rocrand_host_api.cpp" OFF)
+if(HIP_COMPILER STREQUAL "nvcc")
+  add_rocrand_benchmark("benchmark_curand_generate.cpp" OFF)
+endif()
 
 if(BUILD_LEGACY_BENCHMARK)
   add_rocrand_benchmark("benchmark_rocrand_generate.cpp" ON)
   add_rocrand_benchmark("benchmark_rocrand_kernel.cpp"   ON)
   if(HIP_COMPILER STREQUAL "nvcc")
-    add_rocrand_benchmark("benchmark_curand_generate.cpp" ON)
     add_rocrand_benchmark("benchmark_curand_kernel.cpp"   ON)
   endif()
 endif()
