Small fixes. Changed benchmark_curand_generate back to legacy and created benchmark_curand_host_api with new implementation

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -45,13 +45,14 @@ endfunction()
 
 add_rocrand_benchmark("benchmark_rocrand_host_api.cpp" OFF)
 if(HIP_COMPILER STREQUAL "nvcc")
-  add_rocrand_benchmark("benchmark_curand_generate.cpp" OFF)
+  add_rocrand_benchmark("benchmark_curand_host_api.cpp" OFF)
 endif()
 
 if(BUILD_LEGACY_BENCHMARK)
   add_rocrand_benchmark("benchmark_rocrand_generate.cpp" ON)
   add_rocrand_benchmark("benchmark_rocrand_kernel.cpp"   ON)
   if(HIP_COMPILER STREQUAL "nvcc")
+    add_rocrand_benchmark("benchmark_curand_generate.cpp" ON)
     add_rocrand_benchmark("benchmark_curand_kernel.cpp"   ON)
   endif()
 endif()
