add nvcc-specific hiprand cmake variable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -226,6 +226,9 @@ else()
     option(BUILD_HIPRAND "Build hipRAND as part of rocRAND" ON)
 endif()
 if(BUILD_HIPRAND)
+    if(HIP_COMPILER STREQUAL "nvcc")
+        set(BUILD_WITH_LIB "CUDA")
+    endif()
     if(EXISTS ${CMAKE_SOURCE_DIR}/hipRAND/CMakeLists.txt)
         set(HIPRAND_SUBMODULE ON CACHE BOOL "Build hipRAND as a submodule of rocRAND." FORCE)
         add_subdirectory(${CMAKE_SOURCE_DIR}/hipRAND ${CMAKE_BINARY_DIR}/hipRAND)
