--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -47,6 +47,7 @@ add_rocrand_benchmark("benchmark_rocrand_host_api.cpp" OFF)
 add_rocrand_benchmark("benchmark_rocrand_device_api.cpp" OFF)
 if(HIP_COMPILER STREQUAL "nvcc")
   add_rocrand_benchmark("benchmark_curand_host_api.cpp" OFF)
+  add_rocrand_benchmark("benchmark_curand_device_api.cpp" OFF)
 endif()
 
 if(BUILD_LEGACY_BENCHMARK)
