Update bin,cmake path to latest folder structure

--- a/test/package/CMakeLists.txt
+++ b/test/package/CMakeLists.txt
@@ -6,6 +6,7 @@ project(rocrand_package_test CXX)
 # CMake modules
 list(APPEND CMAKE_PREFIX_PATH $ENV{ROCM_PATH} $ENV{ROCM_PATH}/hip)
 list(APPEND CMAKE_MODULE_PATH
+    $ENV{ROCM_PATH}/lib/cmake/hip
     ${HIP_PATH}/cmake $ENV{ROCM_PATH}/hip/cmake # FindHIP.cmake
 )
 
