--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -358,7 +358,6 @@ test:hip-cpu:
   tags:
     - rocm-build
 
-
 .benchmark:
   extends:
     # rocRAND benchmarks are short, we can afford to run them automatically
@@ -585,3 +584,34 @@ test:doc:
     - cd $CI_PROJECT_DIR/doc
     - doxygen Doxyfile
     - make -C ../python/rocrand/docs html
+
+.test:parity:
+  stage: test
+  extends:
+    - .rules:test
+  script:
+    - cd $CI_PROJECT_DIR/build
+    - $SUDO_CMD dpkg -i rocrand*.deb
+    - cmake
+      -S $CI_PROJECT_DIR/test/parity
+      -B $CI_PROJECT_DIR/build_parity_test
+      -D CMAKE_CXX_COMPILER=${COMPILER}
+    - cmake --build $CI_PROJECT_DIR/build_parity_test
+    - $CI_PROJECT_DIR/build_parity_test/test_rocrand_parity | tee $CI_PROJECT_DIR/build_parity_test/parity-test-results.csv
+    - $SUDO_CMD dpkg -r rocrand-benchmarks rocrand-clients rocrand-dev rocrand-tests rocrand
+  artifacts:
+    paths:
+      - $CI_PROJECT_DIR/build_parity_test/parity-test-results.csv
+    expire_in: 2 weeks
+
+test:nvcc-parity:
+  tags:
+    - nvcc
+  extends:
+    - .nvcc:cmake-minimum
+    - .test:parity
+    - .gpus:nvcc
+  needs:
+    - build:nvcc-cmake-minimum
+  before_script:
+    - !reference [".nvcc:cmake-minimum", before_script]
