--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,12 @@ build/
 build_package_test/
 
 ### docs dir ###
-doc/html/
-doc/xml/
-doc/*.tag
+docs/html/
+docs/xml/
+docs/*.tag
+docs/api/
+docs/_build/
+docs/docBin/
 
 ### C++ ###
 # Compiled Object files
