--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -22,11 +22,19 @@
 
 add_executable(xorwow_precomputed_generator xorwow_precomputed_generator.cpp)
 add_executable(sobol32_direction_vector_generator sobol32_direction_vector_generator.cpp)
-add_executable(scrambled_sobol32_direction_vector_generator scrambled_sobol32_direction_vector_generator.cpp)
 add_executable(scrambled_sobol32_constants_generator scrambled_sobol32_constants_generator.cpp)
 add_executable(sobol64_direction_vector_generator sobol64_direction_vector_generator.cpp)
-add_executable(scrambled_sobol64_direction_vector_generator scrambled_sobol64_direction_vector_generator.cpp)
 add_executable(scrambled_sobol64_constants_generator scrambled_sobol64_constants_generator.cpp)
 add_executable(mrg31k3p_precomputed_generator mrg31k3p_precomputed_generator.cpp)
 add_executable(mrg32k3a_precomputed_generator mrg32k3a_precomputed_generator.cpp)
 add_executable(mt19937_precomputed_generator mt19937_precomputed_generator.cpp)
+
+add_executable(scrambled_sobol32_direction_vector_generator
+    scrambled_sobol32_direction_vector_generator.cpp
+    ../library/src/rocrand_sobol32_precomputed.cpp)
+target_include_directories(scrambled_sobol32_direction_vector_generator PRIVATE ../library/src)
+
+add_executable(scrambled_sobol64_direction_vector_generator
+    scrambled_sobol64_direction_vector_generator.cpp
+    ../library/src/rocrand_sobol64_precomputed.cpp)
+target_include_directories(scrambled_sobol64_direction_vector_generator PRIVATE ../library/src)
